<resources>
    <string name="app_name">CouponsApp</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="google_sign_in">Sign In with Google</string>
    <string name="new_user">New User? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="existing_user">Existing User? Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="news">News</string>
    <string name="coupons">Coupons</string>
    <string name="feed">Feed</string>
    <string name="settings">Settings</string>

    <string name="profile_pic">profile pic</string>
    <string name="username">name</string>
    <string name="user_email">name@gmail.com</string>
    <string name="edit_profile">  Edit Profile  </string>
    <string name="change_password">  Change Password  </string>
    <string name="notifications">  Notifications  </string>
    <string name="send_feedback">  Send Feedback  </string>
    <string name="Rate_Us">  Rate Us on PlayStore  </string>
    <string name="about_us">  About Us  </string>
    <string name="logout">  Logout  </string>
    <string name="exit">  EXIT  </string>
    <string name="confirmation">  Do You Really Want To Log Out?  </string>
    <string name="notifi_toggle_button">Off</string>
    <string name="OFF">Off</string>
    <string name="ON">Off</string>

    <string name="headline">Headline</string>
    <string name="source">Source</string>
    <string name="time">Time</string>
    <string name="news_desc">News will appear here...</string>

    <string name="caption">Caption</string>
    <string name="company">Company Name</string>
    <string name="details">Coupon Details will Come Here</string>
    <string name="claim">Claim Coupon</string>

    <string name="forgot_password1">FORGOT PASSWORD</string>
    <string name="confirm">confirm</string>
    <string name="addfeed">Add News Feed</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_coupon_deal_fragment">CouponDealFragment</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="team_mem_1">Adhish</string>
    <string name="team_mem_2">Aman</string>
    <string name="team_mem_3">Aryan</string>
    <string name="team_mem_4">Samarth</string>
    <string name="team_mem_5">Soham</string>
    <string name="team_mem_6">Subodh</string>
    <string name="team_mem_7">Anushya</string>
    <string name="team_mem_8">Yashvardhan</string>
    <string name="team_mem_9">Vamsi</string>


</resources>