<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/user_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:hint="@string/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/profile_pic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/editProf_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/edit_profile"
        android:textAlignment="center"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/mdtp_ic_chevron_right_black_24dp"
        app:drawableStartCompat="@android:drawable/ic_menu_edit" />

    <TextView
        android:id="@+id/changePass_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/change_password"
        android:textAlignment="center"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/mdtp_ic_chevron_right_black_24dp"
        app:drawableStartCompat="@android:drawable/ic_menu_manage" />

    <Switch
        android:id="@+id/notifi_switchB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@android:drawable/sym_action_email"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/notifications"
        android:textAlignment="center"
        android:textOff="@string/OFF"
        android:textOn="@string/ON" />

    <TextView
        android:id="@+id/sendFeedback_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/send_feedback"
        android:textAlignment="center"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/mdtp_ic_chevron_right_black_24dp"
        app:drawableStartCompat="@android:drawable/sym_action_chat" />

    <TextView
        android:id="@+id/aboutUs_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/Rate_Us"
        android:textAlignment="center"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/mdtp_ic_chevron_right_black_24dp"
        app:drawableStartCompat="@android:drawable/btn_star" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@android:drawable/ic_input_get"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/about_us"
        android:textAlignment="center"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/mdtp_ic_chevron_right_black_24dp" />

    <TextView
        android:id="@+id/logout_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@android:drawable/ic_lock_power_off"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:text="@string/logout"
        android:textAlignment="center"
        android:textStyle="bold" />

</LinearLayout>